Fix spacing for questions

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -10,9 +10,12 @@ body{
 	background-color: #FDFDFD;
 }
 
+
+
 .survey{
 	background-color: white;
 	text-align: center;
+	border-radius: 5px;
 }
 
 .question{
